# bobis-quote-signal-engine-v2

./: .env.example  .gitignore  COMMANDS.md  README.md  SYSTEM.md  analyze_grid.py  config.example.yaml  config.yaml  grid_search.py  install_service.ps1  mt5-credentials.example.yaml  mt5-credentials.yaml.example  pf_table.py  pyproject.toml  run_backtest.bat  run_backtest_parallel.bat  run_backtests.ps1  run_parallel_backtest.bat  signal-engine-docs.docx
manager/: config.yaml  gen_gateway_secret.py  install.ps1
manager/src/: __main__.py  supervisor.py
manager/src/app/: bootstrap.py
manager/src/config/: settings.py
manager/src/core/: consensus.py  pipeline.py  router.py
manager/src/server/: engine_server.py  gateway_server.py
src/: __main__.py
src/app/backtesting/: backtest.py  rba.py  run_backtest_all.py  streak_analysis.py  summarize_result.py
src/app/engine/: __init__.py  decision_engine.py  market_replay.py  parity_trace.py
src/app/services/: signal_service.py
src/app/session/: coordinator.py
src/config/: settings.py
src/domain/: trade_management.py
src/domain/assets/: profiles.py
src/interfaces/: scheduler.py
src/tests/: test_backtest_accounting.py  test_backtest_spread.py  test_backtest_trailing.py  test_config_and_market_data.py  test_entry_timing.py  test_manager_log_forwarding.py  test_parity_engine.py  test_rba.py  test_signal_lifecycle.py  test_timing_drift.py  test_trade_management.py  test_ws_rate_limits.py
src/tools/: parity_check.py  signal_simulator.py
zconfig/: exness.yaml  fbs.yaml  fundednext.yaml
(+26 files in other folders)
