[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "signal-engine"
version         = "2.0.0"
description     = "Swing-to-BOS signal engine with WebSocket broadcast"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
signal-engine = "interfaces.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
